--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,8 @@ dkms.conf
 
 # test binaries
 main
+kex_server512
+kex_client512
 test/test_authenticators512
 test/test_authenticators768
 test/test_authenticators1024
