--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ dkms.conf
 
 # test binaries
 main
+keygen
 kex_server512
 kex_client512
 test/test_authenticators512
@@ -74,3 +75,6 @@ test/test_etm768_poly1305
 test/test_speed512
 test/test_speed768
 test/test_speed1024
+# test keypairs
+*id_kyber
+*id_kyber.pub
