--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,8 @@ kex_server512
 kex_client512
 uakex_server512
 uakex_client512
+akex_server512
+akex_client512
 test/test_authenticators512
 test/test_authenticators768
 test/test_authenticators1024
