Crude command-line args parsing

--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,7 @@ test/test_etm768_poly1305
 test/test_speed512
 test/test_speed768
 test/test_speed1024
+test/test_utils
 # test keypairs
 *id_kyber*
 *id_kyber.pub*
