Added implementations for all variations of MAC

--- a/.gitignore
+++ b/.gitignore
@@ -62,12 +62,30 @@ main
 keygen512
 keygen768
 keygen1024
-kex_etm512_server
-kex_etm512_client
-kex_etm768_server
-kex_etm768_client
-kex_etm1024_server
-kex_etm1024_client
+kex_etm512_poly1305_server
+kex_etm512_poly1305_client
+kex_etm768_poly1305_server
+kex_etm768_poly1305_client
+kex_etm1024_poly1305_server
+kex_etm1024_poly1305_client
+kex_etm512_gmac_server
+kex_etm512_gmac_client
+kex_etm768_gmac_server
+kex_etm768_gmac_client
+kex_etm1024_gmac_server
+kex_etm1024_gmac_client
+kex_etm512_cmac_server
+kex_etm512_cmac_client
+kex_etm768_cmac_server
+kex_etm768_cmac_client
+kex_etm1024_cmac_server
+kex_etm1024_cmac_client
+kex_etm512_kmac_server
+kex_etm512_kmac_client
+kex_etm768_kmac_server
+kex_etm768_kmac_client
+kex_etm1024_kmac_server
+kex_etm1024_kmac_client
 kex_mlkem512_server
 kex_mlkem512_client
 kex_mlkem768_server
